# AWS-Spotify-sorter

./: README.md
spotify-sorter/: .gitignore  pyproject.toml
spotify-sorter/spotify_sorter/: .env  app.py
spotify-sorter/spotify_sorter/static/css/: style.css
spotify-sorter/spotify_sorter/templates/: error_page.html  index.html  process_tracks.html  success_page.html
spotify-sorter/spotify_sorter/terraform/: fixtures.tfvars  locals.tf  main.tf  output.tf  outputs.tf  terraform.tfstate  variables.tf
spotify-sorter/spotify_sorter/terraform/spotify_lambda/: main.py
spotify-sorter/tests/: test_spotify_sorter.py
