[tool.poetry]
name = "spotify-sorter"
version = "0.1.0"
description = ""
authors = ["Furkan Ozdemir <f.ozdemir40@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
spotipy = "^2.19.0"
decouple = "^0.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
